--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.77.6"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.21.2",
