--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@eslint/eslintrc": "^3.1.0",
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.0",
+    "antd": "^5.19.1",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
