--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "@eslint/eslintrc": "^3.1.0",
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.0",
-    "antd": "^5.19.1",
+    "@vis.gl/react-google-maps": "^1.1.0",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "google-map-react": "^2.2.1",
     "next": "14.2.4",
     "react": "^18",
+    "react-alert": "^7.0.3",
     "react-dom": "^18",
-    "react-hook-form": "^7.52.1",
     "sass": "^1.77.6"
   },
   "devDependencies": {
